--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Stanford Self-Study (Vedant)
 site_description: My open-source self-study of Stanford AI/ML/Robotics courses with distilled notes, code, and mini-projects.
-site_url: https://VedSoni-dev.github.io/stanford-self-study
+site_url: https://vedsoni-dev.github.io/Stanford-Self-Study/
 repo_url: https://github.com/VedSoni-dev/stanford-self-study
 theme:
   name: material
