docs(cs103): add LaTeX PDF build and link

--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -13,6 +13,15 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install -r requirements.txt
+      # Build LaTeX to PDF (tectonic)
+      - name: Install tectonic
+        run: sudo apt-get update && sudo apt-get install -y tectonic
+      - name: Compile CS103 Lecture 1 PDF
+        run: |
+          cd courses/CS103A/01-intro-set-theory
+          tectonic lecture1.tex
+          mkdir -p ../../../docs/courses/CS103A
+          cp lecture1.pdf ../../../docs/courses/CS103A/
       - run: mkdocs build --strict
       - uses: peaceiris/actions-gh-pages@v3
         with:
